Resources/assets/sass/front/fields/_range-field.scss
.range-field{
    margin-top: 40px;
    .container-range{
        margin-bottom: 35px;
        .container-label{
            height: 52px;
            p{
                @include line-clamp(2,16);
            }
        }
        .rangeslider-horizontal{
            &.rangeslider{
                box-shadow: none !important;
            }
            .rangeslider__handle-tooltip{
                display: none;
            }
            .rangeslider__fill{
                box-shadow: none !important;
            }
            .rangeslider__handle-label {
                position: absolute;
                top: -23px;
            }
            .rangeslider__labels {
                .rangeslider__label-item{
                    top: -43px;
                }
            }
            .rangeslider__handle{
                user-select: none;
                box-shadow: none !important;
                &:after{
                    box-shadow: none !important;
                }
            }
        }
    }
    
}

